--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     working_directory: ~/community-portal/functions
 
     docker:
-      - image: circleci/nopde:10.3
+      - image: circleci/node:10.3
 
     steps:
       - checkout
