--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 1
 jobs:
   build:
-    working_directory: ~/community-portal/functions
+    working_directory: ~/community-portal
 
     docker:
       - image: circleci/node:10.3
@@ -17,15 +17,20 @@ jobs:
           name: Install dependencies
           command: |
             sudo npm i -g serverless
+            cd functions
             npm install
         
       - run:
           name: run tests
-          command: npm run test --coverage
+          command: |
+            cd functions
+            npm run test --coverage
 
       - run:
           name: deploy application
-          command: sls deploy
+          command: |
+            cd functions
+            sls deploy
           
       - save_cache:
           paths:
