--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "serverless-http": "^1.5.5"
   },
   "devDependencies": {
-    "jest": "^22.4.3"
+    "jest": "^22.4.4",
+    "jest-cli": "^23.1.0"
   },
   "scripts": {
     "test": "jest"
