--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
           name: run tests
           command: |
             cd functions
+            npm test
 
       - run:
           name: deploy application
