--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -1,7 +1,7 @@
 provider:
   name: aws
   runtime: nodejs8.10
-  stage: $(opt:stage, 'prod')
+  stage: $(self:custom.stagename)
   region: us-east-1
 
 package:
@@ -9,6 +9,9 @@ package:
   exclude:
     - coverage/**
     - .circleci/**
+
+custom:
+  stagename: $(opt:stage, 'prod')
 
 service: test-endpoint
 
