--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,11 @@ jobs:
 
     steps:
       - checkout
+      - run:
+          name: Setup environmental variables
+          environment: 
+            STAGE: "dev"
+
       - restore_cache:
           keys:
             - dependencies-cache-{{ checksum "./functions/package.json" }}
@@ -30,7 +35,7 @@ jobs:
           name: deploy application
           command: |
             cd functions
-            sls deploy
+            sls deploy --stage $STAGE
           
       - save_cache:
           paths:
