--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,6 @@ workflows:
       - deploy:
           requires:
             - build
-          filters:
-            branches:
-              only:
-                - master
-                - testCircle
+                filters:
+                  branches:
+                    only: testCircle
