--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,9 @@ workflows:
   build_and_test:
     jobs:
       - build
+          filters:
+            branches:
+              only: testCircle
       - deploy:
           requires:
             - build
