--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,9 +50,9 @@ jobs:
 
 workflows:
   version: 1
-  build_and_test:
+  build-and-deploy:
     jobs:
-      - build
+      - build:
           filters:
             branches:
               only: testCircle
