--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,15 +50,10 @@ jobs:
 
 workflows:
   version: 1
-  build-and-deploy:
+  build_and_test:
     jobs:
-      - build:
-          filters:
-            branches:
-              only: testCircle
+      - build
       - deploy:
           requires:
             - build
-          filters:
-            branches:
-              only: testCircle
+         
