--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,8 @@ jobs:
       - image: circleci/node:10.3
 
     steps:
+      - checkout:
+          path: ~/community-portal
       - run:
           name: deploy application
           command: |
