--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
       - run:
           name: deploy application
           command: |
-            npm install 
+            sudo npm i -g serverless
             echo ${CIRCLE_BRANCH}
             sls deploy --stage $STAGE
 
