--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,6 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo npm i -g serverless
             cd functions
             npm install
         
@@ -24,6 +23,7 @@ jobs:
           name: run tests
           command: |
             cd functions
+            npm test
 
       - run:
           name: deploy application
