--- a/functions/package.json
+++ b/functions/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.3",
+    "serverless": "^1.27.3",
     "serverless-http": "^1.5.5"
   },
   "devDependencies": {
