--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,12 +28,12 @@ jobs:
       - run:
           name: deploy application
           command: |
-            if ["${CIRCLE_BRANCH}" == "staging"] then
-              sls deploy --stage staging;
-            elif ["${CIRCLE_BRANCH}" == "master"] then
-              sls deploy --state prod;
-            else 
-              sls deploy --state dev;
+            if [ "${CIRCLE_BRANCH}" == "staging" ]; then
+              sls deploy --stage staging
+            elif [ "${CIRCLE_BRANCH}" == "master" ]; then
+              sls deploy --state prod
+            else then 
+              sls deploy --state dev
             fi
           
       - save_cache:
