--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: |
-            sudo npm i -g serverless
-            npm install
+          command: npm install
         
       - run:
           name: run tests
@@ -29,11 +27,11 @@ jobs:
           name: deploy application
           command: |
             if [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              sls deploy --stage staging
+              node_modules/.bin/sls deploy --stage staging
             elif [ "${CIRCLE_BRANCH}" == "master" ]; then
-              sls deploy --state prod
+              node_modules/.bin/sls deploy --state prod
             else  
-              sls deploy --state dev
+              node_modules/.bin/sls deploy --state dev
             fi
           
       - save_cache:
